--- a/notika/green-horizotal/src/partials/breadcrumb.hbs
+++ b/notika/green-horizotal/src/partials/breadcrumb.hbs
@@ -8,7 +8,7 @@
                         <div class="col-lg-6 col-md-6 col-sm-6 col-12">
                             <div class="breadcomb-wp">
                                 <div class="breadcomb-icon">
-                                    <i class="notika-icon {{breadcrumbIcon}}"></i>
+                                    <i class="{{breadcrumbIcon}}"></i>
                                 </div>
                                 <div class="breadcomb-ctn">
                                     <h2>{{pageTitle}}</h2>
@@ -18,7 +18,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-3">
                             <div class="breadcomb-report">
-                                <button data-bs-toggle="tooltip" data-bs-placement="left" title="Download Report" class="btn"><i class="notika-icon notika-sent"></i></button>
+                                <button data-bs-toggle="tooltip" data-bs-placement="left" title="Download Report" class="btn"><i class="fa-solid fa-paper-plane"></i></button>
                             </div>
                         </div>
                     </div>
