--- a/notika/green-horizotal/src/partials/header.hbs
+++ b/notika/green-horizotal/src/partials/header.hbs
@@ -19,12 +19,12 @@
                     <!-- Search -->
                     <div class="dropdown">
                         <button class="notika-nav-link" type="button" data-bs-toggle="dropdown" data-bs-auto-close="outside">
-                            <i class="notika-icon notika-search"></i>
+                            <i class="fa-solid fa-magnifying-glass"></i>
                         </button>
                         <div class="dropdown-menu dropdown-menu-end notika-dropdown search-dropdown">
                             <div class="search-input-group">
                                 <input type="text" placeholder="Search anything..." class="form-control">
-                                <i class="notika-icon notika-search search-icon"></i>
+                                <i class="fa-solid fa-magnifying-glass search-icon"></i>
                             </div>
                         </div>
                     </div>
@@ -32,7 +32,7 @@
                     <!-- Messages -->
                     <div class="dropdown">
                         <button class="notika-nav-link" type="button" data-bs-toggle="dropdown">
-                            <i class="notika-icon notika-mail"></i>
+                            <i class="fa-solid fa-envelope"></i>
                             <span class="notika-badge">5</span>
                         </button>
                         <div class="dropdown-menu dropdown-menu-end notika-dropdown">
@@ -71,7 +71,7 @@
                     <!-- Notifications -->
                     <div class="dropdown">
                         <button class="notika-nav-link" type="button" data-bs-toggle="dropdown">
-                            <i class="notika-icon notika-alarm"></i>
+                            <i class="fa-solid fa-bell"></i>
                             <span class="notika-badge">3</span>
                         </button>
                         <div class="dropdown-menu dropdown-menu-end notika-dropdown">
@@ -81,7 +81,7 @@
                             <div class="notika-dropdown-body">
                                 <a class="notika-dropdown-item" href="notification.html">
                                     <div class="bg-success text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 35px; height: 35px; margin-right: 12px;">
-                                        <i class="notika-icon notika-success" style="font-size: 14px;"></i>
+                                        <i class="fa-solid fa-circle-check" style="font-size: 14px;"></i>
                                     </div>
                                     <div class="notika-dropdown-content">
                                         <h6>Task Completed</h6>
@@ -90,7 +90,7 @@
                                 </a>
                                 <a class="notika-dropdown-item" href="notification.html">
                                     <div class="bg-warning text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 35px; height: 35px; margin-right: 12px;">
-                                        <i class="notika-icon notika-alarm" style="font-size: 14px;"></i>
+                                        <i class="fa-solid fa-bell" style="font-size: 14px;"></i>
                                     </div>
                                     <div class="notika-dropdown-content">
                                         <h6>Server Alert</h6>
@@ -99,7 +99,7 @@
                                 </a>
                                 <a class="notika-dropdown-item" href="notification.html">
                                     <div class="bg-info text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 35px; height: 35px; margin-right: 12px;">
-                                        <i class="notika-icon notika-chat" style="font-size: 14px;"></i>
+                                        <i class="fa-solid fa-message" style="font-size: 14px;"></i>
                                     </div>
                                     <div class="notika-dropdown-content">
                                         <h6>New Message</h6>
@@ -116,7 +116,7 @@
                     <!-- Tasks -->
                     <div class="dropdown">
                         <button class="notika-nav-link" type="button" data-bs-toggle="dropdown">
-                            <i class="notika-icon notika-menus"></i>
+                            <i class="fa-solid fa-bars"></i>
                             <span class="notika-badge">2</span>
                         </button>
                         <div class="dropdown-menu dropdown-menu-end notika-dropdown" style="min-width: 280px;">
@@ -161,7 +161,7 @@
                     <!-- Chat -->
                     <div class="dropdown">
                         <button class="notika-nav-link" type="button" data-bs-toggle="dropdown">
-                            <i class="notika-icon notika-chat"></i>
+                            <i class="fa-solid fa-message"></i>
                         </button>
                         <div class="dropdown-menu dropdown-menu-end notika-dropdown">
                             <div class="notika-dropdown-header">
