--- a/notika/green-horizotal/src/partials/navbar.hbs
+++ b/notika/green-horizotal/src/partials/navbar.hbs
@@ -6,7 +6,7 @@
             <!-- Home Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle{{#if isHome}} active{{/if}}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="notika-icon notika-house"></i>
+                    <i class="fa-solid fa-house"></i>
                     <span>Home</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -23,7 +23,7 @@
             <!-- Email Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle{{#if isEmail}} active{{/if}}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="notika-icon notika-mail"></i>
+                    <i class="fa-solid fa-envelope"></i>
                     <span>Email</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -36,7 +36,7 @@
             <!-- Interface Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle{{#if isInterface}} active{{/if}}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="notika-icon notika-edit"></i>
+                    <i class="fa-solid fa-pen-to-square"></i>
                     <span>Interface</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -52,7 +52,7 @@
             <!-- Charts Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle{{#if isCharts}} active{{/if}}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="notika-icon notika-bar-chart"></i>
+                    <i class="fa-solid fa-chart-column"></i>
                     <span>Charts</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -66,7 +66,7 @@
             <!-- Tables Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle{{#if isTables}} active{{/if}}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="notika-icon notika-windows"></i>
+                    <i class="fa-solid fa-table-columns"></i>
                     <span>Tables</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -78,7 +78,7 @@
             <!-- Forms Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle{{#if isForms}} active{{/if}}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="notika-icon notika-form"></i>
+                    <i class="fa-solid fa-file-lines"></i>
                     <span>Forms</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -91,7 +91,7 @@
             <!-- Components Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle{{#if isComponents}} active{{/if}}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="notika-icon notika-app"></i>
+                    <i class="fa-solid fa-cube"></i>
                     <span>Components</span>
                 </a>
                 <ul class="dropdown-menu">
@@ -111,7 +111,7 @@
             <!-- Pages Dropdown -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle{{#if isPages}} active{{/if}}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="notika-icon notika-support"></i>
+                    <i class="fa-solid fa-headset"></i>
                     <span>Pages</span>
                 </a>
                 <ul class="dropdown-menu">
